<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        tools:context="tai.nk.learnenglish.Cai_Dat">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="0dp"
            android:background="@drawable/title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/constraintLayout6"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            app:layout_constraintHorizontal_bias="0.0">

            <ImageButton
                android:id="@+id/TL_img_Back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                style="@style/button"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/back" />

            <TextView
                android:id="@+id/txt_CaiDat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/button"
                android:text="@string/thiep_lap"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintLeft_toRightOf="@+id/TL_img_Back"
                android:layout_marginLeft="8dp"
                app:layout_constraintVertical_bias="0.444" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/sw_speak_MacDinh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/su_dung_phan_phat_am_mac_dinh"
            android:gravity="center"
            style="@style/textview2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout6"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/conly_PhatAmTuyChinh"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sw_speak_MacDinh"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView4"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="5dp"
                android:text="@string/chat_giong"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <SeekBar
                android:id="@+id/seekBar_pitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:thumb="@drawable/icon_seekbar"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textColor="#000000"
                android:text="@string/toc_do_doc"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/seekBar_pitch"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <SeekBar
                android:id="@+id/seekBar_speechRate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:thumb="@drawable/icon_seekbar"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintHorizontal_bias="0.0" />

            <EditText
                android:id="@+id/edt_testSpeak"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="0dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/Nhap_tu_phat_am_thu"
                android:inputType="textPersonName"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/TL_img_testSpeak"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/seekBar_speechRate" />

            <ImageButton
                android:id="@+id/TL_img_testSpeak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                style="@style/button2"
                android:layout_marginTop="0dp"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@drawable/loa"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="@+id/edt_testSpeak"
                app:layout_constraintBottom_toBottomOf="@+id/edt_testSpeak"
                android:layout_marginBottom="0dp"
                app:layout_constraintVertical_bias="0.444" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>